# RAG_Project

./: .gitignore
autogen-py/: .env.example  .gitignore  docker-compose.yml  pyproject.toml  ruff.toml
autogen-py/Configuration/: models.json
autogen-py/scripts/: seed_chunks.py
autogen-py/scripts/data/: medical_seed.csv
autogen-py/src/autogen/: __init__.py  _meta.py  lightrag.py  main.py
autogen-py/src/autogen/agent/: __init__.py  qna_agent.py
autogen-py/src/autogen/api/: __init__.py  app.py  deps.py  limiter.py
autogen-py/src/autogen/chunking/: __init__.py  chunker.py
autogen-py/src/autogen/config/: __init__.py  settings.py  tiers.py
autogen-py/src/autogen/conversation/: __init__.py  store.py
autogen-py/src/autogen/di/: __init__.py  container.py  providers.py
autogen-py/src/autogen/embeddings/: __init__.py  jina.py
autogen-py/src/autogen/extraction/: __init__.py  extractor.py  keywords.py  normalizer.py  prompts.py  type_resolver.py
autogen-py/src/autogen/llm/: __init__.py  builder.py  cache_key.py  caching_client.py  catalog.py  kv_cache.py  lite_llm.py  response_cache.py  usage.py
autogen-py/src/autogen/logging/: __init__.py  setup.py
autogen-py/src/autogen/middleware/: __init__.py  auth.py
autogen-py/src/autogen/models/: __init__.py  (+10 more)
autogen-py/tests/: test_chat.py  test_chunker.py  test_conversation_store.py  test_core_models.py  test_di.py  test_embeddings.py  test_extractor.py  test_health.py  test_neo4j.py  test_pipeline.py  test_protocols.py  test_qna_agent.py  test_reranking.py  test_retrieval.py  test_settings.py  test_storage.py
(+41 files in other folders)
