[project]
name = "autogen-py"
version = "0.1.0"
description = "Python port of autogen.net — Phase 0 Foundation"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "structlog>=24.4.0",
    "httpx>=0.28.0",
    "tenacity>=9.0.0",
    "elasticsearch>=8.15.0,<9",
    "elasticsearch[async]>=8.15.0,<9",
    "tiktoken>=0.7.0",
    "neo4j>=5.26.0",
    "litellm>=1.60.0",
    "aiosqlite>=0.20.0",
    "cachetools>=5.5.0",
    "watchfiles>=1.0.0",
    "arq>=0.26.0",
    "redis>=5.0.0",
    "slowapi>=0.1.9",
    "mcp>=1.0.0",
    "websockets>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.7.0",
    "pyright>=1.1.380",
]

[dependency-groups]
dev = ["autogen-py[dev]"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__", "**/.venv", "**/.venv2", "**/.ruff_cache"]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingImports = "error"
reportUnusedImport = "warning"
reportUnusedVariable = "warning"
reportMissingTypeStubs = "none"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/autogen"]
